# zaparoo-frontend

./: .dockerignore  .gitignore  .qmllint.ini  AGENTS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile.arm32  Dockerfile.lint  Dockerfile.toolchain  README.md  justfile
.github/: CLA.md  dependabot.yml  pull_request_template.md
.github/contributors/: signatures.json
.github/workflows/: ci.yml  cla.yml  lint-image-build.yml  release.yml  toolchain-build.yml
cmake/: FindRust.cmake  SyncCxxqtQmlModules.cmake  ZaparooCargoPackage.cmake  ZaparooCompileOptions.cmake  ZaparooLint.cmake  ZaparooQmlModule.cmake  ZaparooRust.cmake
design/: README.md  frontend.qmlproject
design/mocks/Zaparoo/Browse/: AppState.qml  CategoriesModel.qml  GamesModel.qml  GamesState.qml  HubState.qml  SystemsModel.qml
docs/: architecture.md  building.md  cxx-qt-bridge.md  native-core-poc.md  qml-gotchas.md  quickstart.md  style.md  tate-list-view-plan.md  translations.md
packaging/: deploy-desktop.sh
resources/images/status/: bt.xpm  lan.xpm  nfc.xpm  wifi.xpm
rust/: Cargo.toml  deny.toml  rust-toolchain.toml
rust/.cargo/: config.toml
rust/frontend/: Cargo.toml  build.rs
rust/frontend/src/: bind.rs  lib.rs  media_image_cache.rs  mister_runtime.rs
rust/frontend/src/models/: alternate_versions.rs  app_state.rs  app_status.rs  browse.rs  build_info.rs  categories.rs  favorites.rs  favorites_state.rs  game_info.rs  games.rs  games_state.rs  hub_state.rs  input.rs  log_upload.rs  media_status.rs  mod.rs  model_includes.h  notice.rs  platform.rs  qr_code.rs  recents.rs  recents_state.rs  runtime.rs  settings.rs  system_launchers.rs  system_status.rs  systems.rs  systems_state.rs  tag_utils.rs
rust/launcher/: .qmlls.ini  build.rs
rust/launcher/src/: lib.rs  media_image_cache.rs
rust/launcher/src/models/: alternate_versions.rs  categories.rs  favorites.rs  games.rs  hub_state.rs  log_upload.rs  mod.rs  recents.rs  runtime.rs  settings.rs  system_launchers.rs  system_status.rs  systems.rs  systems_state.rs
rust/mock-core/: Cargo.toml
rust/mock-core/src/: fixtures.rs  handler.rs  main.rs
rust/zaparoo-core/: Cargo.toml
rust/zaparoo-core/src/: client.rs  config.rs  input_actions.rs  lib.rs  logger.rs  media_types.rs  persist.rs  platform.rs  platform_paths.rs  remote_resource.rs  runtime.rs  systems_catalog.rs
rust/zaparoo-core/src/endpoints/: catalog.rs  launchers.rs  media_browse.rs  media_favorites.rs  media_history.rs  media_search.rs  media_tags_update.rs  mod.rs  readers.rs  readers_write.rs  run.rs  settings.rs  system_launcher_default.rs
rust/zaparoo-core/src/store/: endpoint.rs  media_status.rs  mod.rs  mutation.rs  tag.rs
scripts/: build-arm32.sh  build-toolchain.sh  deploy-mister.sh  package-macos-app.sh  run-dev.sh  run-macos-mister-core.sh
src/LICENSES/: Iconoir-ATTRIBUTION.txt  Lucide-ATTRIBUTION.txt  console-logos-ATTRIBUTION.txt  zaparoo-update-NOTICE.txt
src/app/: main.cpp  media_image_provider.cpp  media_image_provider.h  native_video_writer.cpp  native_video_writer.h
src/core/: CMakeLists.txt  Config.h  MediaTypes.h  ZaparooClient.cpp  ZaparooClient.h
src/ui/app/: CMakeLists.txt  Main.qml  MainLayout.qml  UpdateEntry.qml
src/ui/components/: ActiveLabel.qml  BootOverlay.qml  BrowseDetailPane.qml  BrowseList.qml  BrowseListDetailView.qml  CMakeLists.txt  CardDivider.qml  CommercialNoticeModal.qml  ContextMenu.qml  CoreStatusPill.qml  DelayedLoadingIndicator.qml  FirstRunIndexModal.qml  FocusedMediaDetailController.qml  GameInfoModal.qml  HeaderBar.qml  LetterJumpModal.qml  ListPickerModal.qml  LoadingIndicator.qml  LogUploadModal.qml  Modal.qml  PagedGrid.qml  QrCodeModal.qml  ScreenStateOverlay.qml  ScreensaverOverlay.qml  ScrollingCaption.qml  SettingsField.qml  SettingsSectionHeader.qml  StatusIcon.qml  Tile.qml  TileBadge.qml  TileLoader.qml  TopStatusStrip.qml
src/ui/screens/: AboutScreen.qml  CMakeLists.txt  FavoritesScreen.qml  GamesScreen.qml  HubScreen.qml  MediaListScreen.qml  RecentsScreen.qml  ScreenManager.qml  SettingsScreen.qml  SystemsScreen.qml
src/ui/theme/: BrowseLayouts.qml  CMakeLists.txt  Motion.qml  Resources.qml  Sizing.qml  Theme.qml
src/ui/theme/browse-profiles/: crt.json  default.json
src/ui/translations/: frontend_ar.ts  frontend_de.ts  frontend_el.ts  frontend_en.ts  frontend_es.ts  frontend_eu.ts  frontend_he.ts  frontend_hi.ts  frontend_it.ts  frontend_ja.ts  frontend_ko.ts  frontend_nl.ts  frontend_ro.ts  frontend_sk.ts  frontend_uk.ts  frontend_zh_CN.ts  launcher_en.ts  launcher_it.ts
src/ui/update_host/: CMakeLists.txt  Modal.qml  TopStatusStrip.qml  UpdateTheme.qml
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt  tst_zaparoo_client.cpp
tests/ui/: CMakeLists.txt  tst_browse_detail_pane.qml  tst_browse_layout_profiles.qml  tst_focused_media_detail_controller.qml  tst_letter_jump_modal.qml  tst_list_picker_modal.qml  tst_main.cpp  tst_media_list_titles.qml  tst_navigation.qml  tst_paged_grid.qml  tst_persistence.qml  tst_sizing.qml  tst_smoke.qml
tests/ui_smoke/: CMakeLists.txt
