# Zaparoo Frontend
# Copyright (c) 2026 Wizzo Pty Ltd and the Zaparoo Project contributors.
# SPDX-License-Identifier: LicenseRef-PolyForm-Noncommercial-1.0.0

[workspace]
members = ["frontend", "mock-core", "zaparoo-core"]
resolver = "2"

[workspace.package]
version      = "0.1.0"
edition      = "2021"
rust-version = "1.90"
license      = "LicenseRef-PolyForm-Noncommercial-1.0.0"
authors      = ["Wizzo Pty Ltd and the Zaparoo Project contributors"]

[workspace.dependencies]
cxx             = "1"
cxx-qt          = "0.8"
cxx-qt-lib      = "0.8"
cxx-qt-build    = "0.8"
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
toml            = "1.1"
tokio           = { version = "1", default-features = false }
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect"] }
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json", "local-time"] }
tracing-appender = "0.2"
time            = { version = "0.3", features = ["local-offset", "macros"] }
futures-util    = { version = "0.3", default-features = false, features = ["sink", "std"] }
uuid            = { version = "1", features = ["v4"] }
dirs-next       = "2"
qrcode          = { version = "0.14.1", default-features = false }
insta           = { version = "1", features = ["yaml"] }
tempfile        = "3"
base64          = "0.22"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn        = "deny"
missing_debug_implementations = "warn"
unused_qualifications         = "warn"
# `unreachable_pub` intentionally omitted — cxx-qt bridge macros emit dozens
# of `pub` items that cannot be demoted without breaking the macro contract.

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"

[workspace.lints.clippy]
# Pedantic as the baseline; noisy lints allowed below.
pedantic = { level = "warn", priority = -1 }

# Pedantic lints that produce more noise than signal for this codebase.
module_name_repetitions  = "allow"
must_use_candidate       = "allow"
missing_errors_doc       = "allow"
missing_panics_doc       = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap       = "allow"
cast_sign_loss           = "allow"
cast_precision_loss      = "allow"
similar_names            = "allow"
# cxx-qt bridge macros and trait-shaped impls require `&self`/`&mut self`
# even when the method body doesn't touch it.
unused_self              = "allow"
# cxx-qt macro expansion returns `Box<T>` for the generated constructors;
# unavoidable at the bridge boundary.
unnecessary_box_returns  = "allow"

# Correctness lints from `restriction` — target AI-generated failure modes.
unwrap_used                     = "deny"
expect_used                     = "warn"
panic                           = "warn"
todo                            = "warn"
unimplemented                   = "warn"
dbg_macro                       = "warn"
print_stdout                    = "warn"
print_stderr                    = "warn"
allow_attributes_without_reason = "warn"
undocumented_unsafe_blocks      = "deny"

[profile.release]
lto           = "thin"
codegen-units = 1
strip         = true
# `panic = "abort"` intentionally not set — tokio/tracing rely on unwinding.

[profile.dev]
# Line tables only: keeps backtraces and panic locations useful but skips
# generating full DWARF type info. Cuts ~10-15% off compile time and
# shrinks `target/` materially. Stable since Rust 1.71.
debug = "line-tables-only"

[profile.dev.build-override]
# Build scripts and proc macros run *during* compilation; cxx-qt 0.8 emits
# a lot of generated code through proc macros (Q_PROPERTY, qinvokable,
# bridge modules). Compiling those macros at -O3 makes them dramatically
# faster to execute, which speeds up every incremental build that touches
# a bridge module. The first cold compile of build scripts takes a few
# extra seconds; everything after that is faster.
opt-level = 3
