# Zaparoo Frontend
# Copyright (c) 2026 Wizzo Pty Ltd and the Zaparoo Project contributors.
# SPDX-License-Identifier: LicenseRef-PolyForm-Noncommercial-1.0.0

[package]
name         = "zaparoo-frontend-rs"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
authors      = { workspace = true }
publish      = false

[lib]
name       = "zaparoo_frontend_rs"
crate-type = ["staticlib"]
path       = "src/lib.rs"

[lints]
workspace = true

[dependencies]
zaparoo-core = { path = "../zaparoo-core" }
cxx          = { workspace = true }
cxx-qt       = { workspace = true }
cxx-qt-lib   = { workspace = true, features = ["qt_gui", "qt_qml", "qt_quickcontrols"] }
tokio        = { workspace = true, features = ["rt-multi-thread", "sync"] }
tracing      = { workspace = true }
time         = { workspace = true }
libc         = "0.2"
qrcode       = { workspace = true }
toml         = { workspace = true }
base64       = { workspace = true }

[dev-dependencies]
tempfile     = { workspace = true }

[build-dependencies]
cxx-qt-build = { workspace = true, features = ["link_qt_object_files"] }
