# Zaparoo Frontend
# Copyright (c) 2026 Wizzo Pty Ltd and the Zaparoo Project contributors.
# SPDX-License-Identifier: LicenseRef-PolyForm-Noncommercial-1.0.0

[package]
name         = "zaparoo-core"
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
authors      = { workspace = true }
publish      = false

[lints]
workspace = true

[dependencies]
serde              = { workspace = true }
serde_json         = { workspace = true }
toml               = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
time               = { workspace = true }
tracing-appender   = { workspace = true }
tokio              = { workspace = true, features = ["rt-multi-thread", "sync", "time", "macros", "net"] }
tokio-tungstenite  = { workspace = true }
futures-util       = { workspace = true }
uuid               = { workspace = true }
dirs-next          = { workspace = true }

[dev-dependencies]
insta    = { workspace = true }
tempfile = { workspace = true }
tokio    = { workspace = true, features = ["macros", "rt"] }
